# Django-Blog-Site-2024

./: README.md  inject_posts.py  posts.json  pyproject.toml
Blog/: settings.py  urls.py
blogApp/: urls.py  views.py
blogApp/migrations/: 0001_initial.py
blogApp/templates/blogApp/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
users/: mixins.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
